--- a/Diffraction/CH2_04-Structure_Factors.ipynb
+++ b/Diffraction/CH2_04-Structure_Factors.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -112,7 +112,8 @@
       "Populating the interactive namespace from numpy and matplotlib\n",
       "Using KinsCat library version  0.5  by G.Duscher\n",
       "spglib not installed; Symmetry functions of spglib disabled\n",
-      "pyTEM version:  0.2021.01.09\n"
+      "pyTEM version:  0.2021.01.09\n",
+      "notebook version:  2021.02.03\n"
      ]
     }
    ],
@@ -136,7 +137,9 @@
     "                             # with Atomic form factors from Kirklands book\n",
     "    \n",
     "# it is a good idea to show the version numbers at this point for archiving reasons.\n",
-    "print('pyTEM version: ',pyTEMlib.__version__)"
+    "__notebook_version__ = '2021.02.03'\n",
+    "print('pyTEM version: ', pyTEMlib.__version__)\n",
+    "print('notebook version: ', __notebook_version__)"
    ]
   },
   {
@@ -4571,7 +4574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   },
   "livereveal": {
    "height": 768,
