--- a/Diffraction/CH2_05-Diffraction-Rings.ipynb
+++ b/Diffraction/CH2_05-Diffraction-Rings.ipynb
@@ -826,7 +826,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import scipy\n",
+    "import scipy.signal\n",
+    "print((831 +1327) - 1024)\n",
+    "print((803   +1288) - 1024)\n",
+    "x_line_plot = diff_pattern[np.arange(2048),np.arange(2048)]\n",
+    "y_line_plot = diff_pattern[np.arange(2048),2047-np.arange(2048)]\n",
+    "peaks_x = scipy.signal.find_peaks(x_line_plot, prominence=5000)\n",
+    "peaks_y = scipy.signal.find_peaks(y_line_plot, prominence=5000)\n",
+    "print(peaks_x[0],peaks_y[0])\n",
+    "plt.figure()\n",
+    "#plt.plot(diff_pattern[:, 1022:1025].sum(axis=1))\n",
+    "plt.plot(np.arange(2048)+-(1134-1067)/2, x_line_plot)\n",
+    "plt.plot(y_line_plot)\n",
+    "plt.scatter(peaks_x[0],  x_line_plot[peaks_x[0]])\n",
+    "plt.scatter(peaks_y[0],  y_line_plot[peaks_y[0]])"
+   ]
   }
  ],
  "metadata": {
