--- a/Diffraction/CH2_06-Kinematic_Scattering_Geometry.ipynb
+++ b/Diffraction/CH2_06-Kinematic_Scattering_Geometry.ipynb
@@ -8811,7 +8811,7 @@
     "width": "191.2px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
