--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -40,9 +40,9 @@
     "* [Structure Factors](CH2_04-Structure_Factors.ipynb)\n",
     "* [Analyzing Ring Diffraction Pattern](CH2_05-Diffraction-Rings.ipynb)\n",
     "* [Kinematic Scattering Geometry](CH2_06-Kinematic_Scattering_Geometry.ipynb)\n",
-    "    * [Relrod - Sample Geometry and Excitation Error](CH2_07-Relrod.ipynb)\n",
-    "* [Plotting of Diffraction Pattern](CH2_08-Plotting_Diffraction_Pattern.ipynb)\n",
-    "* [Analyzing Spot Diffraction Pattern](CH2_09-Spot_Diffraction_Pattern.ipynb)\n",
+    "    * [Relrod - Sample Geometry and Excitation Error](CH2_06b-Relrod.ipynb)\n",
+    "* [Plotting of Diffraction Pattern](CH2_07-Plotting_Diffraction_Pattern.ipynb)\n",
+    "* [Analyzing Spot Diffraction Pattern](CH2_08-Spot_Diffraction_Pattern.ipynb)\n",
     "* [Kikuchi Lines](CH2_10-Kikuchi_Lines.ipynb)\n",
     "* [HOLZ Lines](CH2_11-HOLZ_Lines.ipynb)\n",
     "* [Lattice Determination with HOLZ](CH2_12-HOLZ_Example.ipynb) \n",
