Stereographic Projection Notebook Added

--- a/Diffraction/CH2_07-Plotting_Diffraction_Pattern.ipynb
+++ b/Diffraction/CH2_07-Plotting_Diffraction_Pattern.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -121,17 +121,18 @@
    "source": [
     "# import matplotlib and numpy\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
-    "%pylab --no-import-all notebook\n",
-    "\n",
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    %pylab --no-import-all inline\n",
+    "else:\n",
+    "    %pylab --no-import-all notebook\n",
+    "    \n",
     "# 3D plotting package used\n",
     "from mpl_toolkits.mplot3d import Axes3D # 3D plotting \n",
     "\n",
     "# additional package \n",
     "import itertools \n",
     "import scipy.constants as const\n",
-    "\n",
-    "import sys\n",
-    "sys.path.insert(0,'../pyTEMlib/')\n",
     "\n",
     "# Import libraries from the pyTEMlib\n",
     "import pyTEMlib.KinsCat as ks         # Kinematic sCattering Library"
@@ -6444,7 +6445,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -7444,6 +7445,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Generating Spot Pattern\n",
+    "What needs to be done for a spot patterm\n",
+    "\n",
+    "1. Generate the reciprocal lattice\n",
+    "2. Rotate zone axis to coincide with z-axis; Rotate reciprocal lattice the same way.\n",
+    "3. Select all reciprocal lattice points that have a excitation error smaller than S$_{max}$.\n",
+    "4. Determine the allowed reflections of those reciprocal lattice points.\n",
+    "5. Plot these spots (projection is done by ignoring z-axis value, which is the Laue zone).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion\n",
     "The scattering geometry provides all the tools to determine which reciprocal lattice points are possible and which of them are allowed.\n",
     "\n",
@@ -7511,7 +7526,7 @@
     "width": "240px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
