--- a/Diffraction/CH2_8-Spot_Diffraction_Pattern.ipynb
+++ b/Diffraction/CH2_8-Spot_Diffraction_Pattern.ipynb
@@ -15,10 +15,10 @@
     "\n",
     "# Analyzing Spot Diffraction Pattern\n",
     "\n",
-    "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Diffraction/CH2_07-Spot_Diffraction_Pattern.ipynb)\n",
+    "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Diffraction/CH2_08-Spot_Diffraction_Pattern.ipynb)\n",
     " \n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Diffraction/CH2_07-Spot_Diffraction_Pattern.ipynb)\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Diffraction/CH2_08-Spot_Diffraction_Pattern.ipynb)\n",
     "\n",
     "\n",
     "\n",
@@ -53,7 +53,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "installing pyTEMlib\n",
       "done\n"
      ]
     }
@@ -124,8 +123,11 @@
    "source": [
     "# import matplotlib and numpy\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
-    "%pylab --no-import-all notebook\n",
-    "\n",
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    %pylab --no-import-all inline\n",
+    "else:\n",
+    "    %pylab --no-import-all notebook\n",
     "\n",
     "# additional package \n",
     "import  itertools \n",
@@ -144,6 +146,34 @@
     "import pyTEMlib.file_tools as ft\n",
     "import pyTEMlib\n",
     "print(pyTEMlib.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Acquisition of Selected Area Diffraction Patterns\n",
+    "\n",
+    "Practical steps:\n",
+    "- Make sure that area of interest is in focus.\n",
+    "- Insert SAD or equivalent aperture in image plane\n",
+    "- Remove objective aperture (let all the diffracted beams through)\n",
+    "- Focus the SAD aperture (Put's that apertre  in the image plane of the objective lens)\n",
+    "- Switch to diffraction mode \n",
+    "- Adjust convergence angle  (C3) within the limits given by the area you want to investigate\n",
+    "- Focus the diffraction pattern with the intermediate lens (diffraction focus).\n",
+    "- Correct astigmatism \n",
+    "- Block zero beam with the pointer. (You can damage the CCD)\n",
+    "- Use long exposer times ($>$ 1 sec: better dynamics, sharper pattern) or even take several at different exposure times. \n",
+    "\n",
+    ">**Some tips:**\n",
+    ">- cooling the specimen will reduce thermal diffuse scattering (scattering at phonons).\n",
+    ">\n",
+    ">- With a Gatan Image Filter (GIF) or a in-column filter one can filter out the inelastic scattering  (lower energy) electrons responsible for a lot of the background intensity.\n",
+    ">\n",
+    ">- CCD cameras usually have a lower dynamic range  and can be easily damaged by the zero refection. Summing several diffraction pattern increases the dynamic range of the data.\n",
+    ">\n",
+    ">- Changes in the lattice parameter due to stress will not be easily seen in the diffraction patterns, but HOLZ line patterns (later) give that level of accuracy.\n"
    ]
   },
   {
@@ -7421,9 +7451,9 @@
     "## Navigation\n",
     "\n",
     "- <font size = \"3\">  **Back: [Plotting Diffraction Pattern](CH2_07-Plotting_Diffraction_Pattern.ipynb)** </font>\n",
-    "- <font size = \"3\">  **Next: [Kikuchi Lines](CH2_09-Kikuchi_Lines.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Next: [Unit Cell Determination](CH2_09-Unit_Cell.ipynb)** </font>\n",
     "- <font size = \"3\">  **Chapter 2: [Diffraction](CH2_00-Diffraction.ipynb)** </font>\n",
-    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>"
+    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>\n"
    ]
   },
   {
