Added Kikuchi  Notebook

--- a/Diffraction/CH2_07-Plotting_Diffraction_Pattern.ipynb
+++ b/Diffraction/CH2_07-Plotting_Diffraction_Pattern.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -114,7 +114,9 @@
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n",
       "Using KinsCat library version  0.5  by G.Duscher\n",
-      "spglib not installed; Symmetry functions of spglib disabled\n"
+      "spglib not installed; Symmetry functions of spglib disabled\n",
+      "pyTEM version:  0.2021.02.09\n",
+      "notebook version:  2021.02.11\n"
      ]
     }
    ],
@@ -135,7 +137,12 @@
     "import scipy.constants as const\n",
     "\n",
     "# Import libraries from the pyTEMlib\n",
-    "import pyTEMlib.KinsCat as ks         # Kinematic sCattering Library"
+    "import pyTEMlib\n",
+    "import pyTEMlib.KinsCat as ks         # Kinematic sCattering Librar\n",
+    "\n",
+    "__notebook_version__ = '2021.02.11'\n",
+    "print('pyTEM version: ', pyTEMlib.__version__)\n",
+    "print('notebook version: ', __notebook_version__)"
    ]
   },
   {
@@ -7526,7 +7533,7 @@
     "width": "240px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
