--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -43,6 +43,7 @@
     "    * [Relrod - Sample Geometry and Excitation Error](CH2_06b-Relrod.ipynb)\n",
     "* [Plotting of Diffraction Pattern](CH2_07-Plotting_Diffraction_Pattern.ipynb)\n",
     "* [Analyzing Spot Diffraction Pattern](CH2_08-Spot_Diffraction_Pattern.ipynb)\n",
+    "* [Unic Cell Determination and Stereographic Projection](CH2_09-Unit_Cell.ipynb)\n",
     "* [Kikuchi Lines](CH2_10-Kikuchi_Lines.ipynb)\n",
     "* [HOLZ Lines](CH2_11-HOLZ_Lines.ipynb)\n",
     "* [Lattice Determination with HOLZ](CH2_12-HOLZ_Example.ipynb) \n",
@@ -187,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   },
   "toc": {
    "base_numbering": 1,
