--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -32,7 +32,10 @@
    "source": [
     "The diffraction chapter has the following sections:\n",
     "## Content\n",
+    "\n",
     "The Diffraction chapter has the following sections:\n",
+    "\n",
+    "### Kinematic Scattering\n",
     "* [The Electron](CH2_01-Electron.ipynb)\n",
     "* [Atomic Form Factor](CH2_02-Atomic_Form_Factor.ipynb)\n",
     "* [Basic Crystallography](CH2_03-Basic_Crystallography.ipynb)\n",
@@ -47,7 +50,10 @@
     "* [Kikuchi Lines](CH2_10-Kikuchi_Lines.ipynb)\n",
     "* [HOLZ Lines](CH2_11-HOLZ_Lines.ipynb)\n",
     "* [Lattice Determination with HOLZ](CH2_12-HOLZ_Example.ipynb) \n",
-    "* [Kinematic Diffraction with KinsCat](CH2_13Kinematic_Diffraction_with_KinsCat.ipynb)\n",
+    "* [Kinematic Diffraction with KinsCat](CH2_13-Kinematic_Diffraction_with_KinsCat.ipynb)\n",
+    "\n",
+    "### Dynamic Scattering\n",
+    "\n",
     "\n",
     "# Introduction\n",
     "\n",
