--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -54,6 +54,8 @@
     "\n",
     "### Dynamic Scattering\n",
     "\n",
+    "* [Bloch Waves]()\n",
+    "\n",
     "\n",
     "# Introduction\n",
     "\n",
