--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "### Dynamic Scattering\n",
     "\n",
-    "* [Bloch Waves]()\n",
+    "* [Bloch Waves](CH2_D01-Bloch)\n",
     "\n",
     "\n",
     "# Introduction\n",
@@ -88,7 +88,7 @@
     "\n",
     "- Dynamic theory incorporates multi scattering events.\n",
     "- Dynamic theory results in Rocking Curves of intensities of diffracted beams with sample thickness.\n",
-    "- Dynamic theory can analytically be solved only for the two beam case, strangely the basis for conventional TEM."
+    "- Dynamic theory can analytically be solved only for the two beam case, strangely the basis for conventional TEM.\n"
    ]
   },
   {
