--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "### Dynamic Scattering\n",
     "\n",
-    "* [Bloch Waves](CH2_D01-Bloch)\n",
+    "* [Bloch Waves](CH2_D01-Bloch.ipynb)\n",
     "\n",
     "\n",
     "# Introduction\n",
