--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -55,6 +55,7 @@
     "### Dynamic Scattering\n",
     "\n",
     "* [Bloch Waves](CH2_D01-Bloch.ipynb)\n",
+    "* [Multi-Slice]()\n",
     "\n",
     "\n",
     "# Introduction\n",
