Added Lab1 Notebook

--- a/Diffraction/CH2_08-Spot_Diffraction_Pattern.ipynb
+++ b/Diffraction/CH2_08-Spot_Diffraction_Pattern.ipynb
@@ -8368,7 +8368,7 @@
     "width": "262px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
