Added Lab1 Notebook

--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -55,7 +55,7 @@
     "### Dynamic Scattering\n",
     "\n",
     "* [Bloch Waves](CH2_D01-Bloch.ipynb)\n",
-    "* [Multi-Slice]()\n",
+    "* [Multi-Slice](CH2_D01-Multi_Slice.ipynb)\n",
     "\n",
     "\n",
     "# Introduction\n",
