Updated Laue Circle

--- a/Diffraction/CH2_09-Unit_Cell.ipynb
+++ b/Diffraction/CH2_09-Unit_Cell.ipynb
@@ -87,13 +87,14 @@
     "\n",
     "Beside the basic numerical (numpy) and plotting (pylab of matplotlib) libraries,\n",
     "\n",
-    "and some libraries from the book\n",
-    "* kinematic scattering library."
+    "and some libraries from pyTEMlib\n",
+    "* kinematic scattering library.\n",
+    "* animation "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -101,18 +102,8 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n",
-      "Using KinsCat library version  0.5  by G.Duscher\n",
-      "spglib not installed; Symmetry functions of spglib disabled\n",
       "pyTEM version:  0.2021.02.17\n",
-      "notebook version:  2021.02.11\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pyUSID\\viz\\__init__.py:16: FutureWarning: Please use sidpy.viz.plot_utils instead of pyUSID.viz.plot_utils. pyUSID.plot_utils will be removed in a future release of pyUSID\n",
-      "  warn('Please use sidpy.viz.plot_utils instead of pyUSID.viz.plot_utils. '\n"
+      "notebook version:  2021.02.17\n"
      ]
     }
    ],
@@ -129,13 +120,11 @@
     "import  itertools \n",
     "from matplotlib import patches\n",
     "\n",
-    "# Import libraries from the book\n",
-    "\n",
     "# Import libraries from pyTEMlib\n",
     "import pyTEMlib\n",
     "import pyTEMlib.KinsCat as ks         # Kinematic sCattering Library\n",
     "                             # Atomic form factors from Kirklands book\n",
-    "\n",
+    "from pyTEMlib import animation        # Provide some functions to plot schematic plots\n",
     "__notebook_version__ = '2021.02.17'\n",
     "print('pyTEM version: ', pyTEMlib.__version__)\n",
     "print('notebook version: ', __notebook_version__)"
@@ -3272,7 +3261,7 @@
     }
    ],
    "source": [
-    "from pyTEMlib import animation \n",
+    "\n",
     "plt.figure()\n",
     "animation.deficient_holz_line(exact_bragg=False, laue_zone=0, color='black')\n",
     "animation.deficient_holz_line(exact_bragg=True, laue_zone=0, color='blue')"
