--- a/Diffraction/CH2_11-HOLZ_Lines.ipynb
+++ b/Diffraction/CH2_11-HOLZ_Lines.ipynb
@@ -3261,129 +3261,13 @@
     }
    ],
    "source": [
-    "\n",
     "import pyTEMlib.animation  as animate\n",
+    "\n",
     "plt.figure()\n",
-    "def deficient_holz_line(exact_Bragg=False, shift = False, laue_zone=1, color_B='black'):\n",
     "\n",
-    "    K_0 = [0,1/ks.get_wavelength(600)]\n",
-    "    d = .5 # lattice parameter in nm\n",
-    "\n",
-    "    if laue_zone == 0:\n",
-    "        s_g = 1/d+0.6\n",
-    "    else:\n",
-    "        s_g = 1\n",
-    "        \n",
-    "   \n",
-    "    g = np.linspace(-5,6,12)* 1/d\n",
-    "    g_d = np.array([5./d+laue_zone*1/d/2 ,laue_zone*1/d ])\n",
-    "    g_sg = g_d.copy() \n",
-    "    g_sg[1] = g_d[1]+s_g # point on Ewald sphere\n",
-    "    \n",
-    "    # recirocal lattice\n",
-    "    plt.scatter(g[:-1], [0]*11, color='red')\n",
-    "    plt.scatter(g-1/d/2, [1/d]*12, color='blue')\n",
-    "    \n",
-    "\n",
-    "    theta2e=np.arcsin(np.linalg.norm(g_sg/2)/K_0[1])\n",
-    "    theta2=np.arcsin(np.linalg.norm(g_d)/2/K_0[1])\n",
-    "    \n",
-    "    shift_x = shift_y = 0.\n",
-    "    d_theta = 0\n",
-    "   \n",
-    "    if exact_Bragg:\n",
-    "        \n",
-    "        d_theta1 = np.arctan((1/d*laue_zone+s_g)/g_d[0])\n",
-    "        d_theta2 = np.arctan((1/d*laue_zone)/g_d[0])\n",
-    "        d_theta = -(d_theta1 - d_theta2)\n",
-    "        s_g = 0\n",
-    "        s = np.sin(d_theta)\n",
-    "        c = np.cos(d_theta)\n",
-    "        K_0 = [-s* K_0[1],c* K_0[1]]\n",
-    "        if shift:\n",
-    "            shift_x = -K_0[0]\n",
-    "            shift_y = np.linalg.norm(K_0)-K_0[1]\n",
-    "        d_theta =np.degrees(d_theta)\n",
-    "       \n",
-    "    K_0[0] += shift_x\n",
-    "    K_0[1] += shift_y\n",
-    "    \n",
-    "    # Ewald Sphere\n",
-    "    ewald_sphere = patches.Circle((K_0[0], K_0[1]), radius=np.linalg.norm(K_0), clip_on=False, zorder=10, linewidth=1,\n",
-    "                        edgecolor=color_B, fill=False)\n",
-    "    plt.gca().add_artist(ewald_sphere)\n",
-    "\n",
-    "    plt.gca().arrow(g[-1] +1/d/4, 1/d/2, 0, 1/d/2, head_width=0.3, head_length=0.4, fc='k', \n",
-    "             ec='k', length_includes_head=True)\n",
-    "    plt.gca().arrow(g[-1] +1/d/4, 1/d/2, 0, -1/d/2, head_width=0.3, head_length=0.4, fc='k', \n",
-    "             ec='k', length_includes_head=True)\n",
-    "    plt.gca().annotate(\"$|g_{HOLZ}|$\",  xytext=(g[-1] +1/d/3, 1/d/3), xy=(g[-1] +1/d/3, 1/d/3))\n",
-    "\n",
-    "   \n",
-    "    # K_0\n",
-    "    plt.scatter(K_0[0],K_0[1])\n",
-    "    plt.gca().arrow(K_0[0], K_0[1], -K_0[0]+shift_x, -K_0[1]+shift_y, head_width=0.3, head_length=0.4, fc=color_B, \n",
-    "             ec=color_B, length_includes_head=True)\n",
-    "    plt.gca().annotate(\"K$_0$\",  xytext=(K_0[0]/2, K_0[1]/3), xy=(K[0]/2, K_0[1]/2))\n",
-    "\n",
-    "    # K_d Bragg of HOLZ reflection \n",
-    "    plt.gca().arrow(K_0[0], K_0[1], -K_0[0]+g_d[0]+shift_x, -K_0[1]+g_d[1]+s_g+shift_y, head_width=0.3, head_length=0.4, fc=color_B, \n",
-    "             ec=color_B, length_includes_head=True)\n",
-    "    plt.gca().annotate(\"K$_d$\",  xytext=(K_0[0]+(g_d[0]-K_0[0])/2, K_0[1]/2), xy=(6.5/d/2, K_0[1]/2))\n",
-    "\n",
-    "    # s_g excitation Error of HOLZ reflection\n",
-    "    if s_g > 0 :\n",
-    "        plt.gca().arrow(g_d[0], g_d[1], 0, s_g, head_width=0.3, head_length=0.4, fc='k', \n",
-    "                 ec='k', length_includes_head=True)\n",
-    "        plt.gca().annotate(\"s$_g$\",  xytext=(g_d[0]*1.01, g_d[1]+s_g/3), xy=(g_d[0]*1.01, g_d[1]+s_g/3))\n",
-    "\n",
-    "    # Bragg angle\n",
-    "    g_sg = g_d \n",
-    "    g_sg[1] = g_d[1]+s_g\n",
-    "    plt.plot([0+shift_x,g_sg[0]+shift_x],[0+shift_y,g_d[1]+shift_y], color=color_B, linewidth = 1, alpha = 0.5, linestyle='--')\n",
-    "    plt.plot([K_0[0],g_sg[0]/2+shift_x],[K_0[1],g_sg[1]/2+shift_y], color=color_B, linewidth = 1, alpha = 0.5, linestyle='--')\n",
-    "    #d_theta = np.degrees(np.arctan(K_0[0]/K_0[1]))\n",
-    "    bragg_angle = patches.Arc((K_0[0],K_0[1]), width=K_0[1], height=K_0[1], \n",
-    "                              theta1=-90+d_theta, \n",
-    "                              theta2=-90+d_theta+np.degrees(np.arcsin(np.linalg.norm(g_sg/2)/K_0[1])),\n",
-    "                              fc=color_B, ec=color_B)\n",
-    "    \n",
-    "    plt.gca().annotate(r\"$\\theta $\",  xytext=(K_0[0]/1.3, K_0[1]/1.5), xy=(K_0[0]/2+g_d[0]/4, K_0[1]/2))\n",
-    "    plt.gca().add_patch(bragg_angle)\n",
-    "   \n",
-    "    # deviation/tilt angle\n",
-    "    if np.abs(d_theta)>0:\n",
-    "        if shift:\n",
-    "            deviation_angle = patches.Arc((K_0[0],K_0[1]), width=K_0[1]*1.5, height=K_0[1]*1.5, \n",
-    "                                      theta1=-90+d_theta, \n",
-    "                                      theta2=-90,\n",
-    "                                      fc=color_B, ec=color_B, linewidth=3)\n",
-    "            plt.gca().annotate(r\"$d \\theta $\",  xytext=(K_0[0]-1.3, K_0[1]/3.7), xy=(K_0[0]+g_d[0]/4, K_0[1]/2))\n",
-    "            plt.gca().arrow(shift_x, -2, 0, 2, head_width=0.5, head_length=0.6, fc=color_B, \n",
-    "                     ec='black', length_includes_head=True, linewidth = 3)\n",
-    "            plt.gca().annotate(\"deficient line\",  xytext=(shift_x*2, -2), xy=(shift_x,0))\n",
-    "\n",
-    "    \n",
-    "        else:\n",
-    "            deviation_angle = patches.Arc((0,0), width=K_0[1], height=K_0[1], \n",
-    "                                          theta1=np.degrees(d_theta2),\n",
-    "                                          theta2=np.degrees(d_theta1),\n",
-    "                                          fc=color_B, ec=color_B, linewidth=3)\n",
-    "            plt.gca().annotate(r\"$d \\theta $\",  xytext=(g_d[0]*.8, 1/d/3), xy=(g_d[0], 1/d))\n",
-    "\n",
-    "        plt.gca().add_patch(deviation_angle)\n",
-    "    \n",
-    "    #\n",
-    "    plt.gca().set_aspect('equal')\n",
-    "    plt.xlim(-14,14)\n",
-    "    plt.ylim(-4,K_0[1]*1.1)\n",
-    "\n",
-    "animate.deficient_holz_line(exact_bragg=False, laue_zone=0, color='black')\n",
-    "animate.deficient_holz_line(exact_bragg=True, laue_zone=0, color='blue')\n",
-    "\n",
-    "#animate.deficient_holz_line(exact_bragg=False, laue_zone=1)\n",
-    "#animate.deficient_holz_line(exact_bragg='True', laue_zone=1, color='blue')\n",
-    "#animate.deficient_holz_line(exact_bragg='True', laue_zone=1, color='red', shift=True)\n"
+    "animate.deficient_holz_line(exact_bragg=False, laue_zone=1)\n",
+    "animate.deficient_holz_line(exact_bragg='True', laue_zone=1, color='blue')\n",
+    "animate.deficient_holz_line(exact_bragg='True', laue_zone=1, color='red', shift=True)\n"
    ]
   },
   {
