--- a/Diffraction/CH2_10-Kikuchi_Lines.ipynb
+++ b/Diffraction/CH2_10-Kikuchi_Lines.ipynb
@@ -41,15 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "installing pyTEMlib\n",
-      "done\n"
+      "installing pyTEMlib\n"
      ]
     }
    ],
@@ -70,7 +69,7 @@
     "    !pip install pyTEMlib -q\n",
     "# pyTEMlib setup ------------------\n",
     "else:\n",
-    "    if test_package('pyTEMlib') < '0.2021.2.1':\n",
+    "    if test_package('pyTEMlib') < '0.2021.2.22':\n",
     "        print('installing pyTEMlib')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
@@ -8513,7 +8512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": "10",
