Added Multislice notebook

--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -50,12 +50,11 @@
     "* [Kikuchi Lines](CH2_10-Kikuchi_Lines.ipynb)\n",
     "* [HOLZ Lines](CH2_11-HOLZ_Lines.ipynb)\n",
     "* [Lattice Determination with HOLZ](CH2_12-HOLZ_Example.ipynb) \n",
-    "* [Kinematic Diffraction with KinsCat](CH2_13-Kinematic_Diffraction_with_KinsCat.ipynb)\n",
     "\n",
     "### Dynamic Scattering\n",
     "\n",
     "* [Bloch Waves](CH2_D01-Bloch.ipynb)\n",
-    "* [Multi-Slice](CH2_D01-Multi_Slice.ipynb)\n",
+    "* [Multislice](CH2_D02-Multislice.ipynb)\n",
     "\n",
     "\n",
     "# Introduction\n",
@@ -197,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
