--- a/Diffraction/CH2_D02-Multislice.ipynb
+++ b/Diffraction/CH2_D02-Multislice.ipynb
@@ -176,11 +176,13 @@
    "source": [
     "## Overview of Multislice Algorithm\n",
     "\n",
+    "The multislice solution is formally equivalent to a solution of the [``Howie-Whelan equation``](https://doi-org.proxy.lib.utk.edu/10.1098/rspa.1961.0157) (which is the differential form of the Bloch wave solution), if the slice thickness $\\Delta$z is small enough. \n",
+    "\n",
     "The idea is to slice the sample into thin slices that can be handled well in electron diffraction.\n",
     "\n",
     "And then we step through these slices one by one and keep track of the incoming and exiting wave.\n",
     "\n",
-    "We seperate (serialize) the problem to conquer it.\n",
+    "We seperate (serialize) the problem to conquer it iteratively.\n",
     "\n",
     "The algorithm can be divided in several steps.\n",
     "\n",
@@ -189,7 +191,7 @@
     "3. The transmission function will deal with the distorition of the wave by the atom potentials.\n",
     "4. The Fresnel propagator takes care of the vacuum between the atomic layers.\n",
     "5. We need to define the incident wave.\n",
-    "6. We let this wave travel through the different layers.\n",
+    "6. We let this wave travel through the different layers, iteratively.\n",
     "\n",
     "Step 3 is done in real space and step 4 in Fourier Space and so a lot of Fourier transfom is going on. This lends itself  speed-up through parallel fast Fourier transform algorithms, which you can see at the increasing codes with gpu usage."
    ]
