CBED Multislice and first Imaging Notebooks

--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -54,7 +54,8 @@
     "### Dynamic Scattering\n",
     "\n",
     "* [Bloch Waves](CH2_D01-Bloch.ipynb)\n",
-    "* [Multislice](CH2_D02-Multislice.ipynb)\n",
+    "* [Multislice Algorithm](CH2_D02-Multislice.ipynb)\n",
+    "* [CBED with Multisice](CH2_D03-Multislice_CBED.ipynb)\n",
     "\n",
     "\n",
     "# Introduction\n",
@@ -209,7 +210,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
