--- a/_MSE672_Intro_TEM.ipynb
+++ b/_MSE672_Intro_TEM.ipynb
@@ -56,18 +56,28 @@
     "   \n",
     "* **Chapter 2: [Diffraction](./Diffraction/CH2_00-Diffraction.ipynb)**\n",
     "    * [The Electron](./Diffraction/CH2_01-Electron.ipynb)\n",
+    "  \n",
+    "  *Kinematic Scattering*\n",
+    "  \n",
     "    * [Atomic Form Factor](./Diffraction/CH2_02-Atomic_Form_Factor.ipynb)\n",
     "    * [Basic Crystallography](./Diffraction/CH2_03-Basic_Crystallography.ipynb)\n",
     "        * [Fourier Transform Laboratory](./Diffraction/CH2_03b-FourierTransformLaboratory.ipynb)\n",
     "    * [Structure Factors](./Diffraction/CH2_04-Structure_Factors.ipynb)\n",
     "    * [Analyzing Ring Diffraction Pattern](./Diffraction/CH2_05-Diffraction_Rings.ipynb)\n",
-    "    * [Kinematic Scattering Geometry](Kinematic_Scattering_Geometry.ipynb)\n",
-    "    * [Plotting of Diffraction Pattern](CH2-Plotting_Diffraction_Pattern.ipynb)\n",
-    "    * [Analyzing Spot Diffraction Pattern](Spot_Diffraction_Pattern.ipynb)\n",
-    "    * [Kikuchi Lines](Kikuchi_Lines.ipynb)\n",
-    "    * [HOLZ Lines](HOLZ_Lines.ipynb)\n",
-    "    * [Analyzing Lattice Parameters with HOLZ](HOLZ_Example.ipynb) \n",
-    "    * [Kinematic Diffraction with KinsCat](Kinematic_Diffraction_with_KinsCat.ipynb)\n",
+    "    * * [Kinematic Scattering Geometry](CH2_06-Kinematic_Scattering_Geometry.ipynb)\n",
+    "    * [Relrod - Sample Geometry and Excitation Error](CH2_06b-Relrod.ipynb)\n",
+    "    * [Plotting of Diffraction Pattern](CH2_07-Plotting_Diffraction_Pattern.ipynb)\n",
+    "    * [Analyzing Spot Diffraction Pattern](CH2_08-Spot_Diffraction_Pattern.ipynb)\n",
+    "    * [Unic Cell Determination and Stereographic Projection](CH2_09-Unit_Cell.ipynb)\n",
+    "    * [Kikuchi Lines](CH2_10-Kikuchi_Lines.ipynb)\n",
+    "    * [HOLZ Lines](CH2_11-HOLZ_Lines.ipynb)\n",
+    "    * [Lattice Determination with HOLZ](CH2_12-HOLZ_Example.ipynb) \n",
+    "\n",
+    " *Dynamic Scattering*\n",
+    "\n",
+    "    * [Bloch Waves](CH2_D01-Bloch.ipynb)\n",
+    "    * [Multislice Algorithm](CH2_D02-Multislice.ipynb)\n",
+    "    * [CBED with Multisice](CH2_D03-Multislice_CBED.ipynb)\n",
     "   \n",
     "* **Chapter 3: [Imaging](Ch3-Imaging.ipynb)**\n",
     "    * [Resolution Limit](Ch3-Resolution.ipynb)\n",
@@ -229,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
