Added aberration animation

--- a/Imaging/CH3_00-Imaging.ipynb
+++ b/Imaging/CH3_00-Imaging.ipynb
@@ -35,12 +35,13 @@
     "* [Resolution Limit](CH3_01-Resolution.ipynb)\n",
     "\n",
     "**Phase Contrast Imaging**\n",
-    "* [Image Processing](CH3_02-ImageProcessing.ipynb)\n",
-    "* [Contrast Transfer Function](CH3_04-CTF.ipynb)\n",
-    "* [HRTEM Image Analysis](CH3_05-ImageAnalysis.ipynb)\n",
-    "* [Linear Image Approximation](CH3_06)\n",
-    "* [Defocus Thickness Map](CH3_07)\n",
-    "\n",
+    "* [Introduction to Phase Contrast Imaging](CH3_02-Intro_HRTEM.ipynb)\n",
+    "* [Contrast Transfer Function](CH3_03-CTF.ipynb)\n",
+    "* [Linear Image Approximation](CH3_04-Linear_Image_Approsimation.ipynb)\n",
+    "* [Defocus Thickness Map](CH3_05)\n",
+    "* [Image Processing](CH3_06-ImageProcessing.ipynb)\n",
+    "* [HRTEM Image Analysis](CH3_07-ImageAnalysis.ipynb)\n",
+    " \n",
     "**Z-Contrast**\n",
     "* [Z-contrast Images](CH3_08)\n",
     "* [Ronchigrams](CH3_09-Ronchigrams.ipynb)\n",
@@ -50,28 +51,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Back:  Chapter 2: [Diffraction](CH2-Diffraction.ipynb)\n",
-    "## Next:  Chapter 4: [Spectroscopy](CH4-Spectroscopy.ipynb)\n",
-    "\n",
-    "## List of Content: [Front](_MSE672-IntroToTEM.ipynb)"
+    "## Navigation\n",
+    "- <font size = \"3\">  **Back Chapter 2: [Diffraction](../Diffraction/CH2_00-Diffraction.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Next: Chapter 4: [Spectroscopy](../Spectroscopy/CH4_00-Spectroscopy.ipynb)** </font>\n",
+    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
