--- a/Imaging/CH3_01-Resolution.ipynb
+++ b/Imaging/CH3_01-Resolution.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\"> **Chapter 3: [Imaging](Ch2_00-Imaging.ipynb)** </font>\n",
+    "<font size = \"5\"> **Chapter 3: [Imaging](CH3_00-Imaging.ipynb)** </font>\n",
     "\n",
     "\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
@@ -3218,6 +3218,16 @@
     "\n",
     ">\n",
     "> Remember Resolution and Magnification are **NOT** related"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Navigation\n",
+    "- <font size = \"3\">  **Back Chapter 2: [Diffraction](CH3_00-Imaging.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Next: [Introduction to Phase Contrast](CH3_02-Intro_HRTEM.ipynb)** </font>\n",
+    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>\n"
    ]
   },
   {
