defocus-thickness and Weak phase approximation added

--- a/Diffraction/CH2_D02-Multislice.ipynb
+++ b/Diffraction/CH2_D02-Multislice.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -129,8 +129,7 @@
       "Populating the interactive namespace from numpy and matplotlib\n",
       "Using KinsCat library version  0.5  by G.Duscher\n",
       "spglib not installed; Symmetry functions of spglib disabled\n",
-      "0.2021.02.22\n",
-      "pyTEM version:  0.2021.02.22\n"
+      "pyTEM version:  0.2021.03.02\n"
      ]
     },
     {
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6469,6 +6468,7 @@
     }
    ],
    "source": [
+    "tags = ks.structure_by_name('SrTiO3')\n",
     "lattice_parameter = tags['unit_cell'][0][0]\n",
     "pixel_size = lattice_parameter/(nx/n_cell_x)\n",
     "\n",
