--- a/Imaging/CH3_05-Defocus_Thickness.ipynb
+++ b/Imaging/CH3_05-Defocus_Thickness.ipynb
@@ -1011,6 +1011,9 @@
     "        elem = layers[layer][atom]['element']\n",
     "        print(elem)\n",
     "        pos = layers[layer][atom]['base']\n",
+    "        for pos in unit_cell_base:\n",
+    "        potential = potential + np.roll(atom_potential_corner, shift=np.array(pos), axis = [0,1])\n",
+    "    \n",
     "        slice_potentials[layer] += ds.potential_2dim(elem, nx, nx, n_cell_x, n_cell_x, a, pos)\n",
     "plt.figure()\n",
     "#plt.imshow(layer_potentials.sum(axis=0))\n",
@@ -8786,7 +8789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": "4",
