--- a/Imaging/CH3_08-Thermal_Diffuse_Scattering.ipynb
+++ b/Imaging/CH3_08-Thermal_Diffuse_Scattering.ipynb
@@ -32160,7 +32160,9 @@
    "source": [
     "from abtem.waves import  Probe\n",
     "\n",
-    "probe = Probe(energy=80e3, semiangle_cutoff=20, rolloff=0.1, defocus=40, Cs=3e5, focal_spread=20)"
+    "probe = Probe(energy=80e3, semiangle_cutoff=20, rolloff=0.1, defocus=40, Cs=3e5, focal_spread=20)\n",
+    "pos = [0.,0.]\n",
+    "probe_exit_wave = probe.multislice(positions=pos, potential=potential, pbar=True)\n"
    ]
   },
   {
