--- a/Diffraction/CH2_HW6-CBED.ipynb
+++ b/Diffraction/CH2_HW6-CBED.ipynb
@@ -42,18 +42,19 @@
    "source": [
     "## Homework Assignment\n",
     "\n",
-    "Simulate the siliconi [001] CBED diffraction pattern from Homework 5 (use the one with the higher camera length.\n",
+    "Simulate the silicon [001] CBED diffraction pattern from Homework 5 (use the one with the higher camera length.\n",
     "\n",
     "That homweork is best done on Google colab.\n",
     ">\n",
-    ">Please note that you will have to activate the ``GPU`` under the Menu ``Runtime`` select ``Change runtime typ`` \n",
+    ">Please note that you will have to activate the ``GPU`` under the Menu ``Runtime`` select ``Change runtime type`` \n",
     ">\n",
     "\n",
     "Questions:\n",
-    "- What thickness did you arrive at?\n",
-    "- How can you change the intensity in the middle of the zero disk?\n",
-    "- How is that related with the intensity in the center of the [220] disks?\n",
-    "- Set the convergence angle to the value you derived at in Homework 5 (please note, here it has to be in mrad not 1/nm))"
+    "\n",
+    "1. Set the convergence angle to the value you derived at in Homework 5 (please note, here it has to be in mrad not 1/nm))\n",
+    "2. What thickness did you arrive at?\n",
+    "3. How can you change the intensity in the middle of the zero disk?\n",
+    "4. How is that related with the intensity in the center of the [220] disks?\n"
    ]
   },
   {
@@ -331,11 +332,11 @@
    "width": 1024
   },
   "toc": {
-   "base_numbering": "8",
+   "base_numbering": "1",
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
-   "skip_h1_title": false,
+   "skip_h1_title": true,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
