--- a/Diffraction/CH2_HW6-CBED.ipynb
+++ b/Diffraction/CH2_HW6-CBED.ipynb
@@ -183,7 +183,7 @@
     "layers = int(thickness / lattice_parameter *10)\n",
     "atoms *= (32, 32, layers)\n",
     "\n",
-    "atoms.center()\n"
+    "atoms.center()"
    ]
   },
   {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,27 +242,26 @@
    "source": [
     "## Definition of detector\n",
     "\n",
-    "We use a CCD camera equivalent with lots of pixels\n",
-    "\n",
-    "If you get an error, then you have to either set the ``device`` variable in the above code cell to ``'cpu'`` or you set the runtime of google colab to 'gpu' (under Menu point: Runtime - Chagne runtime type) "
+    "We use a CCD camera equivalent with lots of pixels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "detector = abtem.PixelatedDetector(max_angle='limit')\n"
+    "detector = abtem.PixelatedDetector(max_angle='limit')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multislice calculation"
+    "## Multislice calculation\n",
+    "If you get an error, then you have to either set the ``device`` variable in the code cell before last to ``'cpu'`` or you set the runtime of google colab to 'gpu' (under Menu point: Runtime - Change runtime type) "
    ]
   },
   {
@@ -297,6 +296,25 @@
     "## Repeat \n",
     "\n",
     "Repeat with different thickness till you get the right pattern in the zero disk of the CBED pattern of homework 5 (return to the structure code cell)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the calculation\n",
+    "\n",
+    "We save the numpy array, you can download this file in google colab from the file menu on the left."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Si011-slice0_1.npy', 'wb') as f:\n",
+    "    np.save(f, measurement.array[0])"
    ]
   },
   {
