Added low loss spectroscopy

--- a/Spectroscopy/CH4_00-Spectroscopy.ipynb
+++ b/Spectroscopy/CH4_00-Spectroscopy.ipynb
@@ -10,17 +10,19 @@
     "\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
     "\n",
+    "\n",
     "part of \n",
     "\n",
+    "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "<font size = \"5\"> **[Analysis of Transmission Electron Microscope Data](_Analysis_of_Transmission_Electron_Microscope_Data.ipynb)**</font>\n",
-    "\n",
-    "\n",
-    "by Gerd Duscher, 2019\n",
+    "by Gerd Duscher, Spring 2021\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Joint Institute of Advanced Materials<br>\n",
+    "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
+    "\n",
+    "Background and methods to analysis and quantification of data acquired with transmission electron microscopes.\n",
     "\n",
     "The Spectroscopy chapter has the following sections:\n",
     "\n",
@@ -35,13 +37,12 @@
     "* [Calculating Dielectric Function I: Aluminum](CH4-05-DielectricDFT.ipynb)\n",
     "* [Calculating Dielectric Function II: Silicon](CH4_06-DielectricDFT2.ipynb)\n",
     "\n",
-    "**Core Loss EELS**\n",
-    "* [Background Fit](CH4_07Background_Fit.ipynb)\n",
-    "* [Working with Cross-Sections](CH4_08-Working_with_X-Sections.ipynb)\n",
-    "* [Chemical Composition](CH4_09-Chemical_Composition.ipynb)\n",
-    "* [Analysing Core-Loss Spectra](CH4_10-Analyse_Core_Loss.ipynb)\n",
-    "* [Electron Energy-Loss Near-Edge Structure](CH4_11-ELNES.ipynb)\n",
-    "* [Chemical Composition](CH4_12-Core_Loss.ipynb)\n",
+    "**Core-Loss EELS**\n",
+    "* [Working with Cross-Sections](CH4_07-Working_with_X-Sections.ipynb)\n",
+    "* [Chemical Composition](CH4_08-Chemical_Composition.ipynb)\n",
+    "* [Analysing Core-Loss Spectra](CH4_9-Analyse_Core_Loss.ipynb)\n",
+    "* [Electron Energy-Loss Near-Edge Structure](CH4_1-ELNES.ipynb)\n",
+    "* [Chemical Composition](CH4_11-Core_Loss.ipynb)\n",
     "\n",
     "\n",
     "## Electron Dispersive Spectrosocpy\n"
