Updated sidpy version requirement for spectroscopy.

--- a/Spectroscopy/CH4_08-Chemical_Composition.ipynb
+++ b/Spectroscopy/CH4_08-Chemical_Composition.ipynb
@@ -57,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from pkg_resources import get_distribution, DistributionNotFound\n",
@@ -77,7 +85,10 @@
     "    !pip install pyTEMlib -q\n",
     "# pyTEMlib setup ------------------\n",
     "else:\n",
-    "    if test_package('pyTEMlib') < '0.2021.3.22':\n",
+    "    if test_package('sidpy') < '0.0.5':\n",
+    "        print('installing pyTEMlib')\n",
+    "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "    if test_package('pyTEMlib') < '0.2021.4.10':\n",
     "        print('installing pyTEMlib')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
