--- a/Spectroscopy/CH4_07-Working_with_X-Sections.ipynb
+++ b/Spectroscopy/CH4_07-Working_with_X-Sections.ipynb
@@ -110,7 +110,10 @@
     "    !pip install pyTEMlib -q\n",
     "# pyTEMlib setup ------------------\n",
     "else:\n",
-    "    if test_package('pyTEMlib') < '0.2021.3.22':\n",
+    "    if test_package('sidpy') < '0.0.5':\n",
+    "        print('installing pyTEMlib')\n",
+    "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "    if test_package('pyTEMlib') < '0.2021.4.10':\n",
     "        print('installing pyTEMlib')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
